# MD_Filer

./: .gitignore  Cargo.toml  LICENSE  README.md  REVIEW.md
notes/: algorithms-study.md  book-recommendations.md  meeting-notes.md  project-ideas.md  rust-basics.md  welcome.md
src/: app.rs  index.rs  lib.rs  main.rs  note.rs  shortcuts.rs
tests/: integration_test.rs
